fixing spacing

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@
   font-family: "Inter", sans-serif;
 }
 
-/* ::-webkit-scrollbar {
-  width: 10px;
+::-webkit-scrollbar {
+  /* width: 10px; */
+  display: none;
 }
-
+/*
 ::-webkit-scrollbar-track {
   background: white;
 }
